Edited wiki page DownloadAndInstall through web user interface.

--- a/wiki/DownloadAndInstall.wiki
+++ b/wiki/DownloadAndInstall.wiki
@@ -4,15 +4,21 @@
 
 Programs that must be installed prior:
 
-*Visual C++ 2008 Express Edition* installed: free to download from http://www.microsoft.com/express/
+==Visual C++ 2008 Express Edition installed:==
+Free to download from http://www.microsoft.com/express/
 
-  # Listed under downloads
-  # Then the third tab “Visual Studio 2008 Express”
-  # In the left column, select “Visual C++ 2008 Express Edition”
-  # Select a language and then select “Free Download”
-  # Run the downloaded install file
+*1.* Listed under downloads
 
-*wxWidget 2.8.1* installed: downloaded from http://www.wxwidgets.org/downloads/ 
+*2.* Then the third tab “Visual Studio 2008 Express”
+
+*3.* In the left column, select “Visual C++ 2008 Express Edition”
+
+*4.* Select a language and then select “Free Download”
+
+*5.* Run the downloaded install file
+
+==wxWidget 2.8.1 installed:==
+Downloaded from http://www.wxwidgets.org/downloads/ 
 file name:  wxMSW-2.8.11-Setup.exe or wxMSW-2.8.11-Setup.zip
   # Run and install the Setup.exe
 
