--- a/wiki/Dataset.wiki
+++ b/wiki/Dataset.wiki
@@ -1,13 +1,6 @@
-#summary One-sentence summary of this page.
+# How to add the Dataset to the StripeSpotter Program
 
-= Introduction =
+== Introduction ==
+After the completion of the Download and Install Guide DownloadAndInstall
+The program can be loaded the following Dataset.
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
