--- a/wiki/CompilingFromSource.wiki
+++ b/wiki/CompilingFromSource.wiki
@@ -1,13 +1,23 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
-
-Add your content here.
-
-
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Now with both Visual C++ 2008 Express Edition and wxWidget installed we can begin to construct the program directory.
+
+*1.* Launch Visual C++ 2008 Express Edition, select “File” from the main menu
+
+*2.* Select “Open” from the main toolbar and then select “File...”
+
+*3.* From this browser Select your main hard drive (typically C:), there will be a folder located in this directory named “wxMSW-2.8.11” open this folder. There will then be folder named “build” open this folder, now open the folder “msw”. In the folder “msw” locate and open the file *“wx.dsw”* (file type: VC++ 6 Workspace). ( C:\wxWidgets-2.8.11\build\msw\wx.dsw )
+
+*4.* Under the main toolbar there is a green “Start” button and next to it a “Solution Configuration” drop-down list box, make certain that this box reads *“Unicode Release”*. 
+
+*5.* Select “Build” from the main toolbar and then “Build Solution”. After Build is complete proceed to next step.
+
+*6.* Select “Open” from the main toolbar and then select “File...”
+
+*7.* From this browser window locate the directory of the Project file source (StripeSpotterProject), there will be a folder located in this directory named “MSVC” open this folder. There will then be folder named “StripeSpotterProject” open this folder, now locate and open the file *“StripeSpotterProject.sln”* (file type: Microsoft Visual Studio Solution). (projects\MSVC\StripeSpotterProject\StripeSpotterProject.sln)
+
+*8.* Just like in step 4 , change the drop-down list box to *“Release”* this time.
+
+*9.* Select “Build” from the main toolbar and then “Build Solution”. After Build is complete proceed to next step.
+
+*10.* There will be a newly created folder now in ( projects\MSVC\StripeSpotterProject\) named “Release”, in this directory the program is ready to be ran using “StripeSpotterProject.exe”!
