Edited wiki page CompilingFromSource through web user interface.

--- a/wiki/CompilingFromSource.wiki
+++ b/wiki/CompilingFromSource.wiki
@@ -5,15 +5,15 @@
 ==Visual C++ 2008 Express Edition installed:==
 Free to download from http://www.microsoft.com/express/
 
-*1.* Listed under downloads
+*1.* Listed under the tab *Downloads*.
 
-*2.* Then the third tab “Visual Studio 2008 Express”
+*2.* Then the third tab *“Visual Studio 2008 Express”*.
 
-*3.* In the left column, select “Visual C++ 2008 Express Edition”
+*3.* In the left column, select *“Visual C++ 2008 Express Edition”*.
 
-*4.* Select a language and then select “Free Download”
+*4.* Select a language and then select *“Free Download”*.
 
-*5.* Run the downloaded install file
+*5.* Run the downloaded install file.
 
 ==wxWidget 2.8.1 installed:==
 Downloaded from http://www.wxwidgets.org/downloads/
@@ -32,19 +32,24 @@ Now with both Visual C++ 2008 Express Edition and wxWidget installed we can begi
 *2.* Select “Open” from the main toolbar and then select “File...”
 
 *3.* From this browser Select your main hard drive (typically C:), there will be a folder located in this directory named “wxMSW-2.8.11” open this folder. There will then be folder named “build” open this folder, now 
-open the folder “msw”. In the folder “msw” locate and open the file *“wx.dsw”* (file type: VC++ 6 Workspace). ( C:\wxWidgets-2.8.11\build\msw\wx.dsw )
+open the folder “msw”. In the folder “msw” locate and open the file *“wx.dsw”* (file type: VC++ 6 Workspace).
+
+
+(C:\wxWidgets-2.8.11\build\msw\wx.dsw )
 
 *4.* Under the main toolbar there is a green “Start” button and next to it a “Solution Configuration” drop-down list box, make certain that this box reads *“Unicode Release”*. Pictured below.
-
 [http://stripespotter.googlecode.com/svn/wiki/solutionConfiguration.PNG]
 
 *5.* Select “Build” from the main toolbar and then “Build Solution”. After Build is complete proceed to next step.
 
 *6.* Select “Open” from the main toolbar and then select “File...”
 
-*7.* From this browser window locate the directory of the Project file source (StripeSpotterProject), there will be a folder located in this directory named “MSVC” open this folder. There will then be folder named “StripeSpotterProject” open this folder, now locate and open the file *“StripeSpotterProject.sln”* (file type: Microsoft Visual Studio Solution). (projects\MSVC\StripeSpotterProject\StripeSpotterProject.sln)
+*7.* From this browser window locate the directory of the Project file source (StripeSpotterProject), there will be a folder located in this directory named “MSVC” open this folder. There will then be folder named “StripeSpotterProject” open this folder, now locate and open the file *“StripeSpotterProject.sln”* (file type: Microsoft Visual Studio Solution).
+
+(projects\MSVC\StripeSpotterProject\StripeSpotterProject.sln)
 
 *8.* Just like in step 4 , change the drop-down list box to *“Release”* this time.
+[http://stripespotter.googlecode.com/svn/wiki/release.PNG]
 
 *9.* Select “Build” from the main toolbar and then “Build Solution”. After Build is complete proceed to next step.
 
