--- a/wiki/CompilingFromSource.wiki
+++ b/wiki/CompilingFromSource.wiki
@@ -44,7 +44,7 @@ open the folder “msw”. In the folder “msw” locate and open the file *“
 
 *6.* Select “Open” from the main toolbar and then select “File...”
 
-*7.* From this browser window locate the directory of the Project file source (StripeSpotterProject), there will be a folder located in this directory named “MSVC” open this folder. There will then be folder named “StripeSpotterProject” open this folder, now locate and open the file *“StripeSpotterProject.sln”* (file type: Microsoft Visual Studio Solution).
+*7.* From this browser window locate the directory of the Project source, start with the folder *"project"*, there will be a folder located in this directory named “MSVC” open this folder. There will then be a folder named “StripeSpotterProject” open this folder, now locate and open the file *“StripeSpotterProject.sln”* (file type: Microsoft Visual Studio Solution).
 
 (projects\MSVC\StripeSpotterProject\StripeSpotterProject.sln)
 
