--- a/wiki/CompilingFromSource.wiki
+++ b/wiki/CompilingFromSource.wiki
@@ -9,7 +9,7 @@ Free to download from http://www.microsoft.com/express/
 
 *2.* Then the third tab *“Visual Studio 2008 Express”*.
 
-*3.* In the left column, select *“Visual C++ 2008 Express Edition”*.
+*3.* In the left column, click *“Visual C++ 2008 Express Edition”*.
 
 *4.* Select a language and then select *“Free Download”*.
 
@@ -27,9 +27,9 @@ The name of the file to download:  *wxMSW-2.8.11-Setup.exe* or *wxMSW-2.8.11-Set
 
 Now with both Visual C++ 2008 Express Edition and wxWidget installed we can begin to construct the program directory.
 
-*1.* Launch Visual C++ 2008 Express Edition, select “File” from the main menu
+*1.* Launch Visual C++ 2008 Express Edition, click “File” from the main menu
 
-*2.* Select “Open” from the main toolbar and then select “File...”
+*2.* Select “Open” from the main toolbar and then click “File...”
 
 *3.* From this browser Select your main hard drive (typically C:), there will be a folder located in this directory named “wxMSW-2.8.11” open this folder. There will then be folder named “build” open this folder, now 
 open the folder “msw”. In the folder “msw” locate and open the file *“wx.dsw”* (file type: VC++ 6 Workspace).
@@ -42,7 +42,7 @@ open the folder “msw”. In the folder “msw” locate and open the file *“
 
 *5.* Select “Build” from the main toolbar and then “Build Solution”. After Build is complete proceed to next step.
 
-*6.* Select “Open” from the main toolbar and then select “File...”
+*6.* Select “Open” from the main toolbar and then click “File...”
 
 *7.* From this browser window locate the directory of the Project source, start with the folder *"project"*, there will be a folder located in this directory named “MSVC” open this folder. There will then be a folder named “StripeSpotterProject” open this folder, now locate and open the file *“StripeSpotterProject.sln”* (file type: Microsoft Visual Studio Solution).
 
@@ -51,6 +51,6 @@ open the folder “msw”. In the folder “msw” locate and open the file *“
 *8.* Just like in step 4 , change the drop-down list box to *“Release”* this time.
 [http://stripespotter.googlecode.com/svn/wiki/release.PNG]
 
-*9.* Select “Build” from the main toolbar and then “Build Solution”. After Build is complete proceed to next step.
+*9.* Select “Build” from the main toolbar and then click “Build Solution”. After Build is complete proceed to next step.
 
 *10.* There will be a newly created folder now in ( projects\MSVC\StripeSpotterProject\) named “Release”, in this directory the program is ready to be ran using “StripeSpotterProject.exe".
