Edited wiki page Walkthrough through web user interface.

--- a/wiki/Walkthrough.wiki
+++ b/wiki/Walkthrough.wiki
@@ -11,23 +11,46 @@ Having completed the [DownloadAndInstall] guide, you are now ready to start usin
 
 [http://stripespotter.googlecode.com/svn/wiki/homescreen.PNG]
 
-*3.*
+*3.* Click on the Browser button, locate a folder that contains the photos desired. A list of the photos is now created in the left column.
+
 [http://stripespotter.googlecode.com/svn/wiki/browse.PNG]
+
+*4.* Select a photo and 
+
+
 [http://stripespotter.googlecode.com/svn/wiki/zoomFull.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/zoomBody.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/info.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/identifyAnimal.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/algor.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/flank.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/results.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/choosen.PNG]
-[http://stripespotter.googlecode.com/svn/wiki/save.PNG]
 
-
-Consistent / avoid the inclusion of areas that are not a part of the animal such as the ground
+Consistent / 
+avoid the inclusion of areas that are not the animals body such as grass.
 
 Flank importance
 
 Graffias use the CO algorithm,
 
 choosen pic: allows you to compare the photos side by side
+
+
+
+
+[http://stripespotter.googlecode.com/svn/wiki/zoomBody.PNG]
+
+
+[http://stripespotter.googlecode.com/svn/wiki/info.PNG]
+
+
+[http://stripespotter.googlecode.com/svn/wiki/identifyAnimal.PNG]
+
+
+[http://stripespotter.googlecode.com/svn/wiki/algor.PNG]
+
+
+[http://stripespotter.googlecode.com/svn/wiki/flank.PNG]
+
+
+[http://stripespotter.googlecode.com/svn/wiki/results.PNG]
+
+
+[http://stripespotter.googlecode.com/svn/wiki/choosen.PNG]
+
+
+[http://stripespotter.googlecode.com/svn/wiki/save.PNG]
