--- a/wiki/Walkthrough.wiki
+++ b/wiki/Walkthrough.wiki
@@ -7,23 +7,51 @@ Having completed the [DownloadAndInstall] guide, you are now ready to start usin
 = Details =
 *1.* To start the program open the folder *"StripeSpotter"* and run the file *StripeSpotter.exe* (Type: Application). 
 
-*2.* To start adding pictures to the database click on the button pictured.This will open the *Add pictures to database* window.
+*2.* To start adding pictures to the database click this button:
+
 
 [http://stripespotter.googlecode.com/svn/wiki/homescreen.PNG]
 
-*3.* Click on the Browser button, locate a folder that contains the photos desired. A list of the photos is now created in the left column.
+
+This will open the *Add pictures to database* window.
+
+
+*3.* Click on the *Browser* button, now locate a folder that contains the photos desired. A list of the photos is now created in the left column.
+
 
 [http://stripespotter.googlecode.com/svn/wiki/browse.PNG]
 
-*4.* Select a photo and 
+
+*4.* Select a photo listed in the left column, the photo is now displayed in the right window. Clicking on the image starts a cropping tool, select the entire body of the animal. 
 
 
 [http://stripespotter.googlecode.com/svn/wiki/zoomFull.PNG]
 
-Consistent / 
-avoid the inclusion of areas that are not the animals body such as grass.
 
-Flank importance
+Now click *Zoom In*.
+
+*5.* Now select the portion of the animal that is to be identified, this selection must be kept consistent across all photo selections. Avoid the inclusion of areas that are not the animals body such as grass.
+
+
+[http://stripespotter.googlecode.com/svn/wiki/zoomBody.PNG]
+
+
+*6.* The animal can now be added by clicking *Save as new animal*, this opens a data entry window. 
+
+
+[http://stripespotter.googlecode.com/svn/wiki/info.PNG]
+
+
+*7.* The Flank entry should be kept in mind when photos switch from right to left often. When you are complete with entering information for the particular animal click *Save*.
+
+
+[http://stripespotter.googlecode.com/svn/wiki/flank.PNG]
+
+
+
+[http://stripespotter.googlecode.com/svn/wiki/identifyAnimal.PNG]
+
+
 
 Graffias use the CO algorithm,
 
@@ -32,19 +60,7 @@ choosen pic: allows you to compare the photos side by side
 
 
 
-[http://stripespotter.googlecode.com/svn/wiki/zoomBody.PNG]
-
-
-[http://stripespotter.googlecode.com/svn/wiki/info.PNG]
-
-
-[http://stripespotter.googlecode.com/svn/wiki/identifyAnimal.PNG]
-
-
 [http://stripespotter.googlecode.com/svn/wiki/algor.PNG]
-
-
-[http://stripespotter.googlecode.com/svn/wiki/flank.PNG]
 
 
 [http://stripespotter.googlecode.com/svn/wiki/results.PNG]
@@ -53,4 +69,4 @@ choosen pic: allows you to compare the photos side by side
 [http://stripespotter.googlecode.com/svn/wiki/choosen.PNG]
 
 
-[http://stripespotter.googlecode.com/svn/wiki/save.PNG]
+[http://stripespotter.googlecode.com/svn/wiki/save.png]
