--- a/wiki/Dataset.wiki
+++ b/wiki/Dataset.wiki
@@ -1,6 +1,15 @@
 #summary How to add the Dataset to the StripeSpotter Program
+#labels Featured
 
-== Dataset Guide ==
+== About this dataset ==
+
+(excerpted from the paper at the bottom of this page)
+
+We collected our dataset over a period of seven days at the Ol'Pejeta Conservancy in Laikipia, Kenya, using typical field procedures in ecological data collection. The broader research goal was to collect accurate individual identifications, and therefore accurate association data, for network analysis of two different zebra populations in the area. We used cheap, off-the-shelf digital SLR cameras and lenses. Each day, we made a semi-random circuit through the 90,000 acre nature conservancy, which contains several hundred wild Plains zebras, and fewer than 20 endangered Grevy's zebras (some of which are included in our dataset). Two people stationed on top of the vehicle took pictures while the driver slowly circled individual groups of zebras, so as to capture both flanks of the animal.
+
+We collected as many pictures as possible of each flank of an animal in different positions in its natural walking gait. As a result, a number of pictures are quite similar. A professionally trained field assistant identified the images based on a database of prior sightings stretching back almost ten years. Almost every zebra we observed in the wild was therefore reliably identified. The manual identification method involves assigning each zebra an ad-hoc code based on the pattern of stripes along its shoulder. These (textual) codes are then fed into a photo organizing program that searches metadata for a similar code string. The final match is made by direct visual observation by a professional. We determined after manual identification that several animals were observed on multiple days, which makes our dataset more representative of intended usage.
+
+== Installation Guide ==
 
 After completing the DownloadAndInstall guide the StripeSpotter program is now ready to accept a Dataset. One is located under [Downloads], download all three files of the archive (*data.zip, data.z01, data.z02*) place them in the same directory.
 
@@ -12,7 +21,7 @@ After completing the DownloadAndInstall guide the StripeSpotter program is now r
 
 *4.* You can directly unzip or "drag and drop" the zipped folder named "data" to the location of the *StripeSpotterProgram.exe*. If there is a folder already named "data", See step *2.*.
 
-*5.* The dataset is now ready to be viewed in the StripeSpotter Program!
+*5.* The dataset is now ready to be viewed in the `StripeSpotter` Program!
 
 == Citing ==
 
